fixed alignement tabletree

--- a/alyvix-ui/src/app/ax-designer/tree/tree-node/tree-node.component.scss
+++ b/alyvix-ui/src/app/ax-designer/tree/tree-node/tree-node.component.scss
@@ -44,11 +44,10 @@
     width: 35px;
     height: 31px;
     line-height: 31px;
-    margin-top: 3px;
 }
 
 
- .interaction-keyboard.primary {
+ .interaction-mouse.primary {
     margin-right: 15px;
  }
 
